# ForumAISDK

./: .env.example  .gitignore  LICENSE  README.md  chat_implementation.py  pyproject.toml  release-guide.md  requirements.txt  simple_chat_pay_on_request.py  simple_chat_prepaid.py  streamed_chat_implementation.py  streamed_chat_pay_on_request.py  streamed_chat_prepaid.py
.github/workflows/: release.yml
ModelMarketSDK/: ForumAIModelMarket.json  ForumAIModelMarketSKALE.json  ForumUSD.json  LLMMarket.json  Mixtral8x7BMarket.json  ModelMarket.py  USDC.json  constant.py  util.py
